--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         
 
         <div class="span-input">
-          <input type="email" placeholder="Email Address" id="input" name="email">
+          <input type="email" placeholder="Email Address" label="email">
         </div>
 
         <div class="input-features">    
-          <a class="arrow-div">
-            <img src="images/icon-arrow.svg" alt="">
-          </a>
+          <button class="arrow-div">
+            <img src="images/icon-arrow.svg" alt="Click here to submit">
+          </button>
 
           <div class="icon-error">
             <img src="images/icon-error.svg" alt="">
@@ -59,6 +59,6 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
