--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="input-features">    
-          <button class="arrow-div">
+          <button class="arrow-submit">
             <img src="images/icon-arrow.svg" alt="Click here to submit">
           </button>
 
