--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
 
         <div class="span-input">
-          <input type="email" placeholder="Email Address" label="email">
+          <input type="email" placeholder="Email Address" aria-label="email">
         </div>
 
         <div class="input-features">    
