--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <footer>
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Onyinye Gold Udeozo</a>.
+        Coded by <a href="https://github.com/GoldieCodz">Onyinye Gold Udeozo</a>.
       </p>
     </footer>
     </div>
